Assignment 27 rails html css

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,3 +1,9 @@
-<h1>About Bloccit</h1>
-  <p>This version created by Rene Gomez</p>
-  <p>(with the guidance of Bloc and my mentor)</p>
+<div>
+  <h1>About Bloccit</h1>
+    <p>This version created by Rene Gomez</p>
+    <p>(with the guidance of Bloc and my mentor)</p>
+</div>
+<div>
+  <button class="social-btn"><%= link_to "Find me on LinkedIn",
+  "https://www.linkedin.com/pub/rene-gomez/11/b07/b5" %></button>
+</div>
