--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.social-btn{
+  position: relative;
+  text-align: center;
+  height: 50px;
+  width: 200px;
+  background: #CCFF33;
+  padding-top: 15px;
+  padding-bottom: 20px;
+}
