--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -15,7 +15,7 @@
         </h4>
         <small>
           submitted <%= time_ago_in_words(post.created_at) %> ago <br>
-          <%= post.comments.count %>Comments
+          <%= post.comments.count %> Comments
         </small>
       </div>
     </div>
@@ -23,5 +23,21 @@
   </div>
   <div class="col-md-4">
     <%= link_to "New Post", new_topic_post_path(@topic), class: "btn btn-success" %>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-8">
+    <% @topic.sponsored_posts.each do |post| %>
+    <div class="media">
+      <div class="media-body">
+        <h4 class="media-heading">
+          <%= link_to post.title, topic_sponsored_post_path(@topic, post) %>
+        </h4>
+      </div>
+    </div>
+    <% end %>
+  </div>
+  <div class="col-md-4">
+    <%= link_to "New Sponsored Post", new_topic_sponsored_post_path(@topic), class: "btn btn-success" %>
   </div>
 </div>
