--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -7,8 +7,11 @@
 
 <div class="row">
   <div class="col-md-8">
-    <p class="lead"><%= @topic.description %></p>
-
+    <p class="lead">
+    <%= render partial: "labels/list", locals: { labels: @topic.labels } %>
+    <br/>
+    <%= @topic.description %>
+    </p>
     <% @topic.posts.each do |post| %>
     <div class="media">
       <div class="media-body">
