--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -10,7 +10,11 @@
       </ul>
   </div>
   <div class="col-md-8">
+
     <%= form_for @topic do |f| %>
+    <div class="form-group">
+      <%= render partial: 'ratings/form', locals: { f: f, ratings: @topic.ratings } %>
+    </div>
       <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name, class: "form-control", placeholder: "Enter your topic name here."%>
