--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -12,6 +12,9 @@
   <div class="col-md-8">
     <%= form_for @topic do |f| %>
       <div class="form-group">
+        <%= render partial: 'ratings/form', locals: { f: f, ratings: @topic.ratings } %>
+      </div>
+      <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name, class: "form-control", placeholder: "Enter your new topic name here." %>
       </div>
