--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -12,20 +12,24 @@
   <div class="col-md-8">
 
     <%= form_for @topic do |f| %>
-    <div class="form-group">
-      <%= render partial: 'ratings/form', locals: { f: f, ratings: @topic.ratings } %>
-    </div>
       <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name, class: "form-control", placeholder: "Enter your topic name here."%>
       </div>
+      
       <div class="form-group">
         <%= f.label :description %>
         <%= f.text_area :description, rows: 8, class: "form-control", placeholder: "Enter the description of your topic here."%>
       </div>
+
       <div class="form-group">
         <%= render partial: "labels/form", locals: { f: f, labels: @topic.labels } %>
       </div>
+
+      <div class="form-group">
+        <%= render partial: 'ratings/form', locals: { f: f, r: @topic.rating } %>
+      </div>
+
       <div class="form-group">
         <%= f.label :public, class: "checkbox" do %>
           <%= f.check_box :public %> Public topic
