--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -12,19 +12,23 @@
   <div class="col-md-8">
     <%= form_for @topic do |f| %>
       <div class="form-group">
-        <%= render partial: 'ratings/form', locals: { f: f, ratings: @topic.ratings } %>
-      </div>
-      <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name, class: "form-control", placeholder: "Enter your new topic name here." %>
       </div>
+
       <div class="form-group">
         <%= f.label :description %>
         <%= f.text_area :description, rows: 8, class: "form-control", placeholder: "Enter new topic description here." %>
       </div>
+
       <div class="form-group">
         <%= render partial: "labels/form", locals: { f: f, labels: @topic.labels } %>
       </div>
+
+      <div class="form-group">
+        <%= render partial: 'ratings/form', locals: { f: f, r: @topic.rating } %>
+      </div>
+
       <div class="form-group">
         <%= f.label :public, class: "checkbox" do %>
           <%= f.check_box :public %> Public topic
