Updated ajax comment destroyed

--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,4 +1,4 @@
-<% if @comment.destroy? %>
+<% if @comment.destroyed? %>
   $('#comment-' +<%= @comment.id %>).hide();
   $('.js-comments-count').html("<%= pluralize(@comment.user.comments.count, 'comment') %>");
 <% else %>
